syntax = "proto3";

option csharp_namespace = "RoomManaging.GRPC.Protos";

service HotelsRoomsProtoService {
	rpc GetAllHotels (GetAllHotelsRequest) returns (GetAllHotelsResponse); 
	rpc GetAllRooms (GetAllRoomsRequest) returns (GetAllRoomsResponse);
}

message GetAllHotelsRequest {
}

message GetAllHotelsResponse {
	message Hotel {
		string Id = 1;
		string Name = 2;
	}
	repeated Hotel hotels = 1;
}

message GetAllRoomsRequest {
	string Id = 1;
}

message GetAllRoomsResponse {
	message Room {
		string Id = 1;
		bool Status = 2;
		double Price = 3;
        string Description = 4;
	}
	repeated Room rooms = 1;
}